Bugfixes and improvements
